--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pancakes.html">Good Old Fashioned Pancakes</a>
+        <ul>
+            <li><a href="recipes/pancakes.html">Good Old Fashioned Pancakes</a></li>
+            <li><a href="recipes/chicken.html">Karaage (Japanese Fried Chicken)</a></li>
+            <li><a href="recipes/ham.html">Tangy Honey-Glazed Ham</a></li>
+        </ul>
+
     </body>
 </html>
