--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -39,7 +39,8 @@
             <li>Tap the rack on the baking sheet to remove any loose chunks of starch, then transfer the baking sheet and rack of chicken to the refrigerator for 15 to 30 minutes.</li>
             <li>Heat oil in a deep fryer to 350 degrees F (175 degrees C).</li>
             <li>Without crowding, lower chicken carefully into the hot oil in batches. Fry, tossing occasionally, until cooked through and the outside is crunchy and browned, 3 to 4 minutes. Transfer to a paper towel-lined plate to drain. Repeat with remaining chicken.</li>
-
         </ol>
+        <br><br>
+        <a href="../../odin-recipes/index.html">Back to Main Page</a>
     </body>
 </html>
