--- a/index.html
+++ b/index.html
@@ -3,14 +3,105 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel = "stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/pancakes.html">Good Old Fashioned Pancakes</a></li>
-            <li><a href="recipes/chicken.html">Karaage (Japanese Fried Chicken)</a></li>
-            <li><a href="recipes/ham.html">Tangy Honey-Glazed Ham</a></li>
-        </ul>
-
+        <h1 id="header">Odin Recipes</h1>
+        <section class="cards">
+            <div class="card">
+                <div class="card-thumb">
+                    <img src="images/pancakes.jpg" alt="Stack of pancakes with melted butter, slathered with syrup">
+                </div>
+                <div class="card-content">
+                    <div class="row-wrapper">
+                        <h2 class="recipe-title">Good Old Fashioned Pancakes</h2>
+                    </div>
+                    <ul class="recipe-details">
+                        <li class="recipe-details-item">
+                            <ion-icon name="alarm-outline"></ion-icon>
+                            <span class="value">90</span>
+                            <span class="title">Minutes</span>
+                        </li>
+                        <li class="recipe-details-item">
+                            <ion-icon name="book-outline"></ion-icon>
+                            <span class="value">7</span>
+                            <span class="title">Ingredients</span>
+                        </li>
+                        <li class="recipe-details-item">
+                            <ion-icon name="person-outline"></ion-icon>
+                            <span class="value">4-6</span>
+                            <span class="title">Serving</span>
+                        </li>
+                    </ul>
+                    <p class="description">This honey-glazed ham is coated with delicious brown sugar and sweet honey glaze! It is tender and juicy and goes with everything which makes it ideal for your holiday meal!</p>
+                    <footer class="content-footer">
+                        <a href="recipes/pancakes.html" class="view-recipe">View Recipe</a>
+                    </footer>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-thumb">
+                    <img src="images/chicken.jpg" alt="Karaage, a crispy, juicy, and crazy delicious Japanese fried chicken">
+                </div>
+                <div class="card-content">
+                    <div class="row-wrapper">
+                        <h2 class="recipe-title">Karaage (Japanese Fried Chicken)</h2>
+                    </div>
+                    <ul class="recipe-details">
+                        <li class="recipe-details-item">
+                            <ion-icon name="alarm-outline"></ion-icon>
+                            <span class="value">90</span>
+                            <span class="title">Minutes</span>
+                        </li>
+                        <li class="recipe-details-item">
+                            <ion-icon name="book-outline"></ion-icon>
+                            <span class="value">7</span>
+                            <span class="title">Ingredients</span>
+                        </li>
+                        <li class="recipe-details-item">
+                            <ion-icon name="person-outline"></ion-icon>
+                            <span class="value">4-6</span>
+                            <span class="title">Serving</span>
+                        </li>
+                    </ul>
+                    <p class="description">This honey-glazed ham is coated with delicious brown sugar and sweet honey glaze! It is tender and juicy and goes with everything which makes it ideal for your holiday meal!</p>
+                    <footer class="content-footer">
+                        <a href="recipes/chicken.html" class="view-recipe">View Recipe</a>
+                    </footer>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-thumb">
+                    <img src="images/ham.jpg" alt="Tender, moist and perfectly sweet Honey Glazed Ham">
+                </div>
+                <div class="card-content">
+                    <div class="row-wrapper">
+                        <h2 class="recipe-title">Tangy Honey-Glazed Ham</h2>
+                    </div>
+                    <ul class="recipe-details">
+                        <li class="recipe-details-item">
+                            <ion-icon name="alarm-outline"></ion-icon>
+                            <span class="value">90</span>
+                            <span class="title">Minutes</span>
+                        </li>
+                        <li class="recipe-details-item">
+                            <ion-icon name="book-outline"></ion-icon>
+                            <span class="value">7</span>
+                            <span class="title">Ingredients</span>
+                        </li>
+                        <li class="recipe-details-item">
+                            <ion-icon name="person-outline"></ion-icon>
+                            <span class="value">4-6</span>
+                            <span class="title">Serving</span>
+                        </li>
+                    </ul>
+                    <p class="description">This honey-glazed ham is coated with delicious brown sugar and sweet honey glaze! It is tender and juicy and goes with everything which makes it ideal for your holiday meal!</p>
+                    <footer class="content-footer">
+                        <a href="recipes/ham.html" class="view-recipe">View Recipe</a>
+                    </footer>
+                </div>
+            </div>
+        </section>
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     </body>
 </html>
