Add styles and fix the alignment

--- a/index.html
+++ b/index.html
@@ -80,38 +80,40 @@
       <div class="card">
         <div class="card-thumb">
           <img
-            src="images/pancakes.jpg"
-            alt="Stack of pancakes with melted butter, slathered with syrup"
+            src="images/taco-salad.jpg"
+            alt="Taco salad served in a baked tortilla bowl, on a plate."
           />
         </div>
         <div class="card-content">
           <div class="row-wrapper">
-            <h2 class="recipe-title">Good Old Fashioned Pancakes</h2>
+            <h2 class="recipe-title">Taco Salad</h2>
           </div>
           <ul class="recipe-details">
             <li class="recipe-details-item">
               <ion-icon name="alarm-outline"></ion-icon>
-              <span class="value">90</span>
+              <span class="value">25</span>
               <span class="title">Minutes</span>
             </li>
             <li class="recipe-details-item">
               <ion-icon name="book-outline"></ion-icon>
-              <span class="value">7</span>
+              <span class="value">15</span>
               <span class="title">Ingredients</span>
             </li>
             <li class="recipe-details-item">
               <ion-icon name="person-outline"></ion-icon>
-              <span class="value">4-6</span>
+              <span class="value">6</span>
               <span class="title">Serving</span>
             </li>
           </ul>
           <p class="description">
-            This honey-glazed ham is coated with delicious brown sugar and sweet
-            honey glaze! It is tender and juicy and goes with everything which
-            makes it ideal for your holiday meal!
+            This healthy Taco Salad recipe has seasoned ground beef, lettuce,
+            beans, corn, and all of your favorite toppings served in a crunchy
+            tortilla bowl, and ready in less than 30 minutes.
           </p>
           <footer class="content-footer">
-            <a href="recipes/pancakes.html" class="view-recipe">View Recipe</a>
+            <a href="recipes/taco-salad.html" class="view-recipe"
+              >View Recipe</a
+            >
           </footer>
         </div>
       </div>
@@ -158,38 +160,40 @@
       <div class="card">
         <div class="card-thumb">
           <img
-            src="images/ham.jpg"
-            alt="Tender, moist and perfectly sweet Honey Glazed Ham"
+            src="images/broccoli-cheese-soup.jpg"
+            alt="Broccoli cheese soup served in a bowl with a spoon."
           />
         </div>
         <div class="card-content">
           <div class="row-wrapper">
-            <h2 class="recipe-title">Tangy Honey-Glazed Ham</h2>
+            <h2 class="recipe-title">Broccoli Cheese Soup</h2>
           </div>
           <ul class="recipe-details">
             <li class="recipe-details-item">
               <ion-icon name="alarm-outline"></ion-icon>
-              <span class="value">90</span>
+              <span class="value">40</span>
               <span class="title">Minutes</span>
             </li>
             <li class="recipe-details-item">
               <ion-icon name="book-outline"></ion-icon>
-              <span class="value">7</span>
+              <span class="value">12</span>
               <span class="title">Ingredients</span>
             </li>
             <li class="recipe-details-item">
               <ion-icon name="person-outline"></ion-icon>
-              <span class="value">4-6</span>
+              <span class="value">8</span>
               <span class="title">Serving</span>
             </li>
           </ul>
           <p class="description">
-            This honey-glazed ham is coated with delicious brown sugar and sweet
-            honey glaze! It is tender and juicy and goes with everything which
-            makes it ideal for your holiday meal!
+            This delicious and easy Broccoli Cheese Soup recipe is made with
+            real cheddar cheese and tons of fresh vegetables. The flavor is so
+            incredible it belongs in a restaurant!
           </p>
           <footer class="content-footer">
-            <a href="recipes/ham.html" class="view-recipe">View Recipe</a>
+            <a href="recipes/broccoli-cheese-soup.html" class="view-recipe"
+              >View Recipe</a
+            >
           </footer>
         </div>
       </div>
