--- a/recipes/baked-mac-cheese.html
+++ b/recipes/baked-mac-cheese.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Karaage (Japanese Fried Chicken)</title>
+	<title>Baked Mac and Cheese</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
 	<link rel="stylesheet" href="../style.css">
 </head>
@@ -122,10 +122,10 @@
 			<div class="recipe-ingredients-container">
 				<h3 class="recipe-ingredients-header">
 					Ingredients
-					<div class="recipe-adjustable-servings">
+					<div class="recipe-adjustable-buttons">
 						<button id="servings-1" class="adjustable-servings toggle-active" aria-label="Adjust servings by 1x">1x</button>
-						<button id="servings-2" class="adjustable-servings">2x</button>
-						<button id="servings-3" class="adjustable-servings">3x</button>
+						<button id="servings-2" class="adjustable-servings" aria-label="Adjust servings by 2x">2x</button>
+						<button id="servings-3" class="adjustable-servings" aria-label="Adjust servings by 3x">3x</button>
 					</div>
 				</h3>
 				<ul class="recipe-ingredients">
@@ -163,7 +163,7 @@
 					</li>
 					<li class="recipe-ingredient">
 						<input type="checkbox" aria-label="1 1/2 teaspoons chicken bouillon paste, or bouillon powder">
-						<span>1 1/2 teaspoons chicken bouillon paste , or bouillon powder</span>
+						<span>1 1/2 teaspoons <a href="https://www.amazon.com/gp/product/B00415IRQO/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=taste03e-20&creative=9325&linkCode=as2&creativeASIN=B00415IRQO&linkId=f9a77310e0f7050206934c3ea6120c50" target="_blank" class="with-link">chicken bouillon paste</a>, or bouillon powder</span>
 					</li>
 					<li class="recipe-ingredient">
 						<input type="checkbox" aria-label="1/4 teaspoon onion powder">
@@ -297,52 +297,52 @@
 					Calories: 478kcal
 				</span>
 				<span class="nutrition-label-text">
-					<span>Carbohydrates: 40g</span>
+					Carbohydrates: 40g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Protein: 24g</span>
+					Protein: 24g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Fat: 24g</span>
+					Fat: 24g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Saturated Fat: 12g</span>
+					Saturated Fat: 12g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Polyunsaturated Fat: 2g</span>
+					Polyunsaturated Fat: 2g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Monounsaturated Fat: 9g</span>
+					Monounsaturated Fat: 9g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Trans Fat: 1g</span>
+					Trans Fat: 1g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Cholesterol: 56mg</span>
+					Cholesterol: 56mg
 				</span>
 				<span class="nutrition-label-text">
-					<span>Sodium: 626mg</span>
+					Sodium: 626mg
 				</span>
 				<span class="nutrition-label-text">
-					<span>Potassium: 304mg</span>
+					Potassium: 304mg
 				</span>
 				<span class="nutrition-label-text">
-					<span>Fiber: 2g</span>
+					Fiber: 2g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Sugar: 5g</span>
+					Sugar: 5g
 				</span>
 				<span class="nutrition-label-text">
-					<span>Vitamin A: 443IU</span>
+					Vitamin A: 443IU
 				</span>
 				<span class="nutrition-label-text">
-					<span>Vitamin C: 1mg</span>
+					Vitamin C: 1mg
 				</span>
 				<span class="nutrition-label-text">
-					<span>Calcium: 372mg</span>
+					Calcium: 372mg
 				</span>
 				<span class="nutrition-label-text">
-					<span>Iron: 1mg</span>
+					Iron: 1mg
 				</span>
 				</div>
 			</div>
